syntax = "proto3";
package booksapp;

service BookInfo {
  rpc addBook(Book) returns (BookID);
  rpc getBook(BookID) returns (Book);
  rpc deleteBook(BookID) returns (BookID);
  rpc updateBook(Book) returns (BookID);
  rpc readCSV(File) returns (BookID);
}

message Book {
  string Id = 1;
  string Title = 2;
  string Edition = 3;
  string Copyright = 4;
  string Language = 5;
  string Pages = 6;
  string Author = 7;
  string Publisher = 8;
}

message BookID {
  string value = 1;
}

message File {
  string value = 1;
}
